# inside-sales-dashboard

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  TESTING.md  build.py  input_schema.json  main.py  pyproject.toml
.github/workflows/: agent-tests.yml
dashboard/: start.sh
dashboard/backend/: Dockerfile  pyproject.toml  render.yaml
dashboard/backend/app/: config.py  main.py  models.py  parser.py  sheets_client.py
dashboard/backend/app/routers/: dashboard.py
dashboard/frontend/: index.html  package-lock.json  package.json
dashboard/frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
dashboard/frontend/src/components/: FunnelChart.tsx  KpiCard.tsx  KpiCardGrid.tsx  MetricTable.tsx  MonthTabs.tsx  SectionHeader.tsx  StatusBadge.tsx
dashboard/frontend/src/hooks/: useDashboard.ts
dashboard/frontend/src/utils/: metricColors.ts
src/: agent.py  main_template.py
src/functions/: example.py
tests/: conftest.py  test_main_integration.py
tests/mocks/: openai_mock.py
tests/unit/: test_example.py
